[package]
name = "coin-unchained"
version = "0.1.0"
authors = ["Carol Schulze <carol@ereski.org>"]
edition = "2021"

[dependencies]
bincode = { version = "1.3.3", default-features = false }
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
derivative = { version = "2.2.0", default-features = false }
#ed25519-dalek = { version = "1.0.1", default-features = false, features = ["rand", "serde", "u64_backend"] }
ed25519-dalek = { git = "https://github.com/bltavares/ed25519-dalek", branch = "rand-bump", default-features = false, features = ["rand", "serde", "u64_backend"] }
futures = { version = "0.3.26", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
lmdb-rs = { version = "0.7.6", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
serde = { version = "1.0.152", default-features = false }
serde_derive = { version = "1.0.152", default-features = false }
sha3 = { version = "0.10.6", default-features = false }
thiserror = { version = "1.0.38", default-features = false }
tokio = { version = "1.25.0", default-features = false, features = ["net", "parking_lot", "rt-multi-thread", "sync"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
tracing-subscriber = "0.3.16"

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }
pretty_assertions = "1.3.0"
tokio = { version = "1.25.0", default-features = false, features = ["macros"] }

[profile.release]
codegen-units = 1
lto = true
